<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="#D8E8D0">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:textColor="#0F2902"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/add_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_hint"
        android:textColor="#0F2902"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_title"
        android:id="@+id/purchase_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Сумма в формате: xx.yy"
        android:textColor="#0F2902"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchase_text"
        android:id="@+id/money_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comm_text"
        android:textColor="#0F2902"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money_text"
        android:id="@+id/comment_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choise_cat_text"
        android:textColor="#0F2902"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_text"
        android:id="@+id/choise_cat"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0F2902"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choise_cat"
        android:id="@+id/cat_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>